fix bad header spacing on revamped micro snapshot posts

--- a/mnmnwag/static/scss/blog_post.scss
+++ b/mnmnwag/static/scss/blog_post.scss
@@ -14,10 +14,8 @@
   }
 
   &.micro.snapshot {
-    &.on-index {
-      > header {
-        margin-bottom: 1rem;
-      }
+    > header {
+      margin-bottom: 1rem;
     }
   }
 
